crates/bevy_macros_compile_fail_tests/tests/deref_mut_derive/mismatched_target_type.fail.stderr
error[E0308]: mismatched types
 --> tests/deref_mut_derive/mismatched_target_type.fail.rs:4:10
  |
4 | #[derive(DerefMut)]
  |          ^^^^^^^^
  |          |
  |          expected `&mut String`, found `&mut usize`
  |          expected `&mut String` because of return type
  |
  = note: expected mutable reference `&mut String`
             found mutable reference `&mut usize`
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/deref_mut_derive/mismatched_target_type.fail.rs:15:10
   |
15 | #[derive(DerefMut)]
   |          ^^^^^^^^
   |          |
   |          expected `&mut String`, found `&mut usize`
   |          expected `&mut String` because of return type
   |
   = note: expected mutable reference `&mut String`
              found mutable reference `&mut usize`
   = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)
